# Launchy

./: .env.example  .gitignore  AGENTS.md  PRD.docx  README.md  main.py  pyproject.toml  vercel.json
.cursor/rules/: 00-project.mdc  10-core-controller.mdc  20-agents-crewai.mdc  30-tools.mdc  40-memory-chroma.mdc  50-api-fastapi.mdc  (+2 more)
agents/: AGENTS.md  __init__.py  crew_adapter.py  twin_agent.py  voice_profiler.py
api/: AGENTS.md  deps.py  server.py  workflow_storage.py
cli/: AGENTS.md  main.py
core/: AGENTS.md  __init__.py  config.py  logging.py  pipeline.py
evals/: test_scorer.py
http_api/: AGENTS.md  server.py
memory/: AGENTS.md  __init__.py  chroma_client.py  mongo_context.py  schema.py  update.py
tests/: conftest.py  test_api_runs.py  test_creator_runs.py  test_gemini_image_node.py  test_instagram_stub.py  test_memory_update.py  test_openai_image_node.py  test_pipeline_smoke.py  test_reddit_tool.py  test_workflow_engine.py  test_workflow_instagram_source.py
tools/: AGENTS.md  __init__.py  audio_transcribe.py  instagram_apify_tool.py  landing_page_tool.py  memory_query.py  memory_write.py  reddit_tool.py  scorer_rubric.py  twin_tools.py
twin/: AGENTS.md  __init__.py  session.py
voice/: AGENTS.md  __init__.py  schema.py  sources.py  store.py
web/: .env.example  .env.production  components.json  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
workflow/: AGENTS.md  __init__.py  context.py  engine.py  node_handlers.py  registry.py  render.py  run_hub.py  schema.py
(+163 files in other folders)
